[gd_scene load_steps=7 format=3 uid="uid://btwtgatm1f6gs"]

[ext_resource type="Texture2D" uid="uid://cdnrggovqtkqh" path="res://art/background_2.png" id="1_uwrxv"]
[ext_resource type="Script" uid="uid://dki8jx76473pj" path="res://scripts/main_ui.gd" id="2_lnu2h"]
[ext_resource type="AudioStream" uid="uid://cpp3jrxk4yulg" path="res://sound/music/01.02. Minuet In G.mp3" id="2_yqjtg"]
[ext_resource type="PackedScene" uid="uid://gjviwon5blic" path="res://scenes/bird.tscn" id="4_lbhrr"]
[ext_resource type="PackedScene" uid="uid://b3bholrqdxicg" path="res://scenes/pipe.tscn" id="5_iywne"]
[ext_resource type="PackedScene" uid="uid://cwhmyaen74sbb" path="res://scenes/level.tscn" id="6_p57ef"]

[node name="Game" type="Node"]

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="BackgroundSprite" type="Sprite2D" parent="Background"]
position = Vector2(319, 180)
scale = Vector2(0.35, 0.35)
texture = ExtResource("1_uwrxv")

[node name="MainUI" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("2_lnu2h")

[node name="UI-Center" type="CenterContainer" parent="MainUI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.5
offset_top = -94.0
offset_right = 44.5
offset_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="UI-VBox" type="VBoxContainer" parent="MainUI/UI-Center"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_constants/separation = 16

[node name="StartButton" type="Button" parent="MainUI/UI-Center/UI-VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Start"

[node name="OptionsButton" type="Button" parent="MainUI/UI-Center/UI-VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Options"

[node name="AchievementsButton" type="Button" parent="MainUI/UI-Center/UI-VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Achievemnts"

[node name="ExitButton" type="Button" parent="MainUI/UI-Center/UI-VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Exit"

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_yqjtg")
autoplay = true

[node name="Bird" parent="." instance=ExtResource("4_lbhrr")]
scale = Vector2(0.15, 0.15)

[node name="Pipe" parent="." instance=ExtResource("5_iywne")]
position = Vector2(73, 29)

[node name="Level" parent="." instance=ExtResource("6_p57ef")]

[connection signal="pressed" from="MainUI/UI-Center/UI-VBox/StartButton" to="MainUI" method="_on_start_button_pressed"]
[connection signal="pressed" from="MainUI/UI-Center/UI-VBox/OptionsButton" to="MainUI" method="_on_options_button_pressed"]
[connection signal="pressed" from="MainUI/UI-Center/UI-VBox/AchievementsButton" to="MainUI" method="_on_achievements_button_pressed"]
[connection signal="pressed" from="MainUI/UI-Center/UI-VBox/ExitButton" to="MainUI" method="_on_exit_button_pressed"]
